fix: align members list correctly

--- a/projects/commudle-admin/src/app/feature-modules/community-channels/components/community-channel/community-channel.component.scss
+++ b/projects/commudle-admin/src/app/feature-modules/community-channels/components/community-channel/community-channel.component.scss
@@ -46,6 +46,8 @@
 
     .resources {
       max-width: 100vw;
+      position: relative;
+      bottom: 65px;
     }
 
     @media screen and (max-width: 1089px) {
